# Week_03_EmbeddedCPP-Logger

./: .gitignore  README.md
day01_intro/: fake_register  fake_register.cpp  pointer_lab  pointer_lab.cpp  struct_lab  struct_lab.cpp
day02_c_logger/: CMakeLists.txt  cpp_mpu_log.csv  logger.cpp  mpu_registers.h
day03_cpp_wrapper/src/: CMakeLists.txt  benchmark_arrays.cpp  benchmark_loops.cpp  benchmark_vectors.cpp  inline_vs_noinline.cpp  main_mpu_logger.cpp  mpu6050_wrapper.cpp  mpu6050_wrapper.h
day04_cmsis_nn/: CMakeLists.txt
day04_cmsis_nn/src/: conv_naive_s8.cpp  conv_naive_s8.h  main.cpp
day05_pybind11/: CMakeLists.txt  bindings.cpp  logger.cpp  logger.hpp  setup.py  test_wrapper.py
